# LearningOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  run.sh
include/glad/: glad.c  glad.h
src/getting_started/hello_triangle/: main.c
src/getting_started/hello_triangle/exercise/1/: main.c
src/getting_started/hello_triangle/exercise/2/: main.c
src/getting_started/hello_triangle/exercise/3/: main.c
src/getting_started/shaders/: main.c  main.cpp  shader.fs  shader.vs  shader_s.hpp
src/getting_started/textures/: main.cpp  shader.fs
src/hello_triangle/: main.c
src/hello_triangle/exercise/: main.c
src/hello_triangle/exercise/1/: main.c
src/hello_triangle/exercise/2/: main.c
src/hello_triangle/exercise/3/: main.c
